# cpp-inventory-management-system

./: .gitignore  CMakeLists.txt  Makefile  README.md  inventory.db  inventory_exe  tests_exe
include/: Article.h  Database.h  Exceptions.h  Inventory.h  InventoryManager.h  UI.h
src/: Article.cpp  Database.cpp  Inventory.cpp  InventoryManager.cpp  UI.cpp
tests/: main.cpp  main_new.cpp  tests.cpp
